--- a/repository.yaml
+++ b/repository.yaml
@@ -1,14 +1,3 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2818
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fnil\fcharset0 Menlo-Regular;}
-{\colortbl;\red255\green255\blue255;\red178\green186\blue203;\red31\green33\blue47;\red185\green122\blue229;
-}
-{\*\expandedcolortbl;;\cssrgb\c74902\c78039\c83529;\cssrgb\c16078\c17647\c24314;\cssrgb\c78039\c57255\c91765;
-}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\deftab720
-\pard\pardeftab720\partightenfactor0
-
-\f0\fs30\fsmilli15200 \cf2 \cb3 \expnd0\expndtw0\kerning0
-\outl0\strokewidth0 \strokec2 name\cf4 \strokec4 :\cf2 \strokec2  repotest\cb1 \
-\cb3 url\cf4 \strokec4 :\cf2 \strokec2  https://github.com/amabrouk94/repotest\cb1 \
-\cb3 maintainer\cf4 \strokec4 :\cf2 \strokec2  skarpt Team <tech@skarpt.net\cf4 \strokec4 >}
+name: repotest
+url: https://github.com/amabrouk94/repotest
+maintainer: skarpt Team <tech@skarpt.net>
